--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -24,8 +24,8 @@
                 <li><button>周杰伦 - 魔术先生.mp3</button></li>
                 <li><button>周杰伦 - 黑色毛衣.mp3</button></li>
             </ul>
-            <div class="upload">
-                <button class="pickfiles">将文件退拽到此或点击上传</button>
+            <div id="upload" class="upload">
+                <button id="pickfiles" class="pickfiles">将文件退拽到此或点击上传</button>
             </div>
         </aside>
 
@@ -40,6 +40,15 @@
     </main>
 
     <footer></footer>
+
+    <!-- import javascript -->
+    <script src="js/vendor/jquery.min.js"></script>
+    <script src="js/vendor/moxie.js"></script>
+    <script src="js/vendor/plupload.min.js"></script>
+    <script src="js/vendor/qiniu.min.js"></script>
+
+    <!-- my javascript -->
+    <script src="js/upload.js"></script>
 </body>
 
 </html>
