--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -30,12 +30,7 @@
         </aside>
 
         <section class="content">
-            <div class="form">
-                <input type="text" placeholder="歌曲名">
-                <input type="text" placeholder="歌手名">
-                <input type="text" placeholder="歌曲链接">
-                <button>确认</button>
-            </div>
+            <div id="song-info" class="form"></div>
         </section>
     </main>
 
@@ -48,7 +43,9 @@
     <script src="js/vendor/qiniu.min.js"></script>
 
     <!-- my javascript -->
+    <script src="js/event-hub.js"></script>
     <script src="js/upload.js"></script>
+    <script src="js/song-info.js"></script>
 </body>
 
 </html>
