add a little style

--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -14,7 +14,9 @@
     <main>
         <aside class="control-bar">
             <button class="add-song" id="add-song">添加歌曲</button>
-            <ul id="song-list" class="song-list"></ul>
+            <div class="list-wrap">
+                <ul id="song-list" class="song-list"></ul>
+            </div>
             <div id="upload" class="upload">
                 <button id="pickfiles" class="pickfiles">将文件退拽到此或点击上传</button>
             </div>
