add play-song page

--- a/src/song/index.html
+++ b/src/song/index.html
@@ -9,7 +9,24 @@
 </head>
 
 <body>
-    
+    <div class="bg">
+        <img src="http://p1.music.126.net/K3S3sw_o7gs37CR-ew1toA==/109951163208886843.webp" class="bg-img"></img>
+    </div>
+
+    <header>
+        <div class="logo"></div>
+    </header>
+
+    <main>
+        <div id="player"></div>
+    </main>
+
+    <footer>
+        <span class="open">打开</span>
+        <span class="download">下载</span>
+    </footer>
+
+    <script src="//at.alicdn.com/t/font_604204_qtnvht5zwt7c766r.js"></script>
 </body>
 
 </html>
