playlist-page done

--- a/src/playlist/index.html
+++ b/src/playlist/index.html
@@ -13,18 +13,7 @@
 
     <main>
         <section class="songs-list">
-            <ul id="songs-list">
-                <li id="{{ id }}">
-                    <a href="./song.html?id={{ id }}">
-                        <div class="rank {{ isHottest }}">{{ rank }}</div>
-                        <div class="song-info">
-                            <h4>{{ name }}</h4>
-                            <span class="song-info">{{ singer }} - {{ name }}</span>
-                        </div>
-                        <span class="play-icon sprite"></span>
-                    </a>
-                </li>
-            </ul>
+            <ul id="songs-list"></ul>
         </section>
     </main>
 </body>
