--- a/src/index/index.html
+++ b/src/index/index.html
@@ -58,10 +58,32 @@
             <div class="hot-songs-footer">查看完整榜单 ></div>
         </div>
 
-        <div id="search-songs">搜索</div>
+        <div id="search-songs">
+            <form class="search-songs" action="">
+                <svg class="icon icon-search" aria-hidden="true">
+                    <use xlink:href="#icon-search1"></use>
+                </svg>
+                <input type="text" placeholder="搜索歌曲">
+            </form>
+            <div class="search-songs-result">
+                <h4>最佳匹配</h4>
+                <ul class="search-songs-list" id="search-songs-list">
+                    <li id="{{ id }}">
+                        <a href="./song.html?id={{ id }}">
+                            <div class="song-info">
+                                <h4>{{ name }}</h4>
+                                <span class="song-info">{{ singer }} - {{ name }}</span>
+                            </div>
+                            <span class="play-icon sprite"></span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
 
     </main>
 
+    <script src="//at.alicdn.com/t/font_604204_vst5w6n2x2ksatt9.js"></script>
 </body>
 
 </html>
