add search-fail style

--- a/src/index/index.html
+++ b/src/index/index.html
@@ -65,7 +65,7 @@
                 </svg>
                 <input type="text" placeholder="搜索歌曲">
             </form>
-            <div class="search-songs-result">
+            <div class="search-songs-result" id="search-songs-result">
                 <h4>最佳匹配</h4>
                 <ul class="search-songs-list" id="search-songs-list">
                     <li id="{{ id }}">
@@ -78,6 +78,7 @@
                         </a>
                     </li>
                 </ul>
+                <div class="fail">暂无搜索结果</div>
             </div>
         </div>
 
